Closed
Bug 362609
Opened 19 years ago
Closed 19 years ago
Change font of example label to match default proportional font type
Categories
(Camino Graveyard :: Preferences, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.5
People
(Reporter: froodian, Assigned: froodian)
References
Details
(Keywords: fixed1.8.1.1, polish)
Attachments
(1 file)
|
1.58 KB,
patch
|
stuart.morgan+bugzilla
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
In the Appearance prefs we change the hint text for the Proportional font to match the default font type for the selected region. However, we don't change the font of the hint text. STR:
1. Choose fonts for Western
2. Observe the hint text "(like Times)", shown in Times
3. Change region popup to Japanese
4. Observe the hint text "(like Helvetica)", still shown in Times
We should flip the font back and forth to match the text. I'm not sure how this works with l10n (do they change the text for the "example" font?).
| Assignee | ||
Comment 1•19 years ago
|
||
As I said, I don't know if this is fragile given l10n (or even just fragile on its own).
It'll also require a slight nib tweak to heighten the bounding box for the text, since Helvetica 13 is taller than Times 13. This tweak will appear in the next nib for bug 362572.
Attachment #247295 -
Flags: review?(stuart.morgan)
Comment 2•19 years ago
|
||
Comment on attachment 247295 [details] [diff] [review]
Patch
This looks reasonable to me. I'm not seeing why it would be l10n-fragile, since regardless of whether the hint text is localized, the font type should be right for the default, right?
Attachment #247295 -
Flags: superreview?(mikepinkerton)
Attachment #247295 -
Flags: review?(stuart.morgan)
Attachment #247295 -
Flags: review+
Comment 3•19 years ago
|
||
Comment on attachment 247295 [details] [diff] [review]
Patch
rs=pink
Attachment #247295 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 4•19 years ago
|
||
Checked in on 1.8branch and trunk.
Comment 5•19 years ago
|
||
Moving fixed "1.2" bugs to 1.1 where they were really fixed. Filter on CaminoFixed1.1 for bugmail purposes.
Target Milestone: Camino1.2 → Camino1.1
You need to log in
before you can comment on or make changes to this bug.
Description
•