Camino only - Bug 362609: Change font of 'Like Times'/'Like Helvetica' hint text to always reflect the text.  r=smorgan sr=pink